# tfl-api-dataclass-gen

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: master.yml
docs/: about.rst  api.rst  conf.py  index.rst
src/tfl_api_dataclass_gen/: __init__.py
tests/: core_test.py
